@@ -4,6 +4,7 @@ Akeeba Panopticon 1.0.4
 + Site reports (updates, backups, file scanner, Admin Tools actions) [gh-220]
 + Support for custom templates [gh-249]
 + Send test email [gh-267]
++ Major performance improvement for scheduled tasks
 # [MEDIUM] Repeated notifications for updates if more than one extension with updates is found [gh-258]
 # [MEDIUM] Cannot access My Profile page [gh-241]
 # [MEDIUM] PHP error in the Extensions Updates page if you have extensions with missing Download Keys [gh-240]
